# os-team-14

./: .gitignore  README.md  spec.md
ArduinoStuff/RP2040/firmware/: CMakeLists.txt  main.c
lkm_char_driver/: .lkm.c.swp  .lkm.ko.cmd  .lkm.mod.cmd  .lkm.mod.o.cmd  .lkm.o.cmd  .modules.order.cmd  Makefile  lkm.c  lkm.ko  lkm.mod  lkm.mod.c  modules.order
userspace_app/: Makefile  gamepad_app.c  hashmap.h  tempproc.txt
